# git-ombl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  test_sample.rs
.github/workflows/: release.yml
nix/: git-ombl.nix
nix/treefmt/: default.nix
src/: domain.rs  formatters.rs  lib.rs  main.rs  policy.rs
src/adapters/: git.rs
src/core/: mod.rs  types.rs
src/core/formatting/: formatter.rs
src/core/line_history/: mod.rs  provider.rs  use_case.rs
src/formatters/: colored.rs  json.rs  mod.rs  table.rs  yaml.rs
tests/: integration_tests.rs
