[package]
name = "git-ombl"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
strip-ansi-escapes = "0.2"
